fix(DataTableSkeleton): add prop to hide header, toolbar (#6192)
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/components/data-table/_data-table-skeleton.scss
+++ b/packages/components/src/components/data-table/_data-table-skeleton.scss
@@ -13,6 +13,7 @@
   .#{$prefix}--data-table.#{$prefix}--skeleton {
     th {
       vertical-align: middle;
+      padding-left: 1rem;
     }
 
     th span,
