--- a/packages/components/src/globals/scss/_theme-tokens.scss
+++ b/packages/components/src/globals/scss/_theme-tokens.scss
@@ -245,6 +245,7 @@ $data-table-column-hover: $hover-selected-ui !default;
 /// @type Color
 /// @access public
 /// @group date-picker
+/// @deprecated
 $date-picker-in-range-background-color: $ibm-color__blue-20 !default;
 
 // Modal
