fix(tabs): automatically add scrollbar when content overflows (#6278)
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/components/tabs/_tabs.scss
+++ b/packages/components/src/components/tabs/_tabs.scss
@@ -134,7 +134,7 @@
     @include carbon--breakpoint(md) {
       display: flex;
       transition: inherit;
-      overflow-x: scroll;
+      overflow-x: auto;
       max-width: 100%;
       max-height: none;
     }
