feat(components): support alternate container tokens (#6185)
* feat(components): support alternate container tokens

This change makes text input, number input and text area components to
reflect `$container-0x` tokens, so that those components work well with
alternate set of type/container/icon tokens.

This change also includes our (alternate) development environment
setup, enabled with `CARBON_REACT_STORYBOOK_USE_EXPRESSIVE_THEME=true`
environment variable, to test such alternate set of type/container/icon
tokens.

Refs #6183.

* chore(nunmber-input): eliminate Sass calculation

Co-authored-by: Alessandra Davila <aledavila@ibm.com>
Co-authored-by: DAK <40970507+dakahn@users.noreply.github.com>

--- a/packages/components/demo/scss/demo.scss
+++ b/packages/components/demo/scss/demo.scss
@@ -24,7 +24,7 @@ $feature-flags: (
   enable-css-custom-properties: true,
 );
 
-@import '../../src/globals/scss/vendor/@carbon/themes/scss/mixins';
+@import './expressive-theme';
 @import '../../src/globals/scss/styles';
 
 $deprecations--entry: true;
