--- a/packages/components/src/components/text-area/_text-area.scss
+++ b/packages/components/src/components/text-area/_text-area.scss
@@ -69,6 +69,8 @@
     right: $carbon--spacing-05;
     top: $carbon--spacing-04;
     fill: $support-01;
+    width: $icon-size-01;
+    height: $icon-size-01;
   }
 
   //-----------------------------
