fix(loading): use `$overlay-01` token for overlay (#6323)
Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: DAK <40970507+dakahn@users.noreply.github.com>

--- a/packages/components/src/components/loading/_loading.scss
+++ b/packages/components/src/components/loading/_loading.scss
@@ -70,7 +70,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba($ui-02, 0.6);
+    background-color: $overlay-01;
     display: flex;
     justify-content: center;
     align-items: center;
