fix(carbon): revert pr 6185 (#6331)
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/demo/scss/demo.scss
+++ b/packages/components/demo/scss/demo.scss
@@ -24,7 +24,7 @@ $feature-flags: (
   enable-css-custom-properties: true,
 );
 
-@import './expressive-theme';
+@import '../../src/globals/scss/vendor/@carbon/themes/scss/mixins';
 @import '../../src/globals/scss/styles';
 
 $deprecations--entry: true;
