fix(button): prevent tooltip from showing on incorrect hover (#6349)
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/globals/scss/_tooltip.scss
+++ b/packages/components/src/globals/scss/_tooltip.scss
@@ -100,6 +100,7 @@
     display: flex;
     align-items: center;
     opacity: 0;
+    pointer-events: none;
 
     // IE media query
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
