fix(inline-dropdown): set min width to prevent shrinkage (#6297)
* fix(inline-dropdown): set min width to prevent shrinkage

* fix(inline-dropdown): add max-width on field, menu

--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -252,6 +252,15 @@ $list-box-menu-width: rem(300px);
     height: 100%;
   }
 
+  .#{$prefix}--dropdown--inline .#{$prefix}--list-box__field {
+    max-width: rem(480px);
+  }
+
+  .#{$prefix}--dropdown--inline .bx--list-box__menu {
+    min-width: rem(288px);
+    max-width: rem(480px);
+  }
+
   // The field we use for input, showing selection, etc.
   .#{$prefix}--list-box__field {
     @include button-reset;
