--- a/packages/react/src/components/DataTable/stories/datatable-story.scss
+++ b/packages/react/src/components/DataTable/stories/datatable-story.scss
@@ -2,6 +2,7 @@
 @import '~@carbon/themes/scss/themes';
 
 .demo-expanded-td td {
+  /* stylelint-disable-next-line declaration-no-important */
   padding-left: 3.25rem !important;
   padding-bottom: 1.5rem;
   padding-top: 1rem;
@@ -9,10 +10,12 @@
 
 .demo-inner-container-header {
   @include carbon--type-style('productive-heading-01');
+
   color: $text-01;
 }
 
 .demo-inner-container-content {
   @include carbon--type-style('body-long-01');
+
   color: $text-02;
 }
