docs: update docs to reflect intent (#6398)
Co-authored-by: Vince Picone <Vincent.Patrick.Picone@ibm.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/layout/scss/_breakpoint.scss
+++ b/packages/layout/scss/_breakpoint.scss
@@ -125,7 +125,7 @@ $carbon--grid-breakpoints: (
   @return '-#{$name}';
 }
 
-/// Generate a media query up to the width of the given breakpoint name
+/// Generate a media query from the width of the given breakpoint to infinity
 /// @param {String | Number} $name
 /// @param {Map} $breakpoints [$carbon--grid-breakpoints] - A map of breakpoints where the key is the name
 /// @content
