--- a/packages/components/src/components/dropdown/_dropdown.scss
+++ b/packages/components/src/components/dropdown/_dropdown.scss
@@ -15,6 +15,8 @@
 @import '../../globals/scss/css--reset';
 @import '../../globals/scss/layout';
 
+@import '../list-box/list-box';
+
 /// Dropdown styles
 /// @access private
 /// @group dropdown
