fix(InlineLoading): update success svg color (#6359)

--- a/packages/components/src/components/inline-loading/_inline-loading.scss
+++ b/packages/components/src/components/inline-loading/_inline-loading.scss
@@ -46,7 +46,7 @@
   }
 
   .#{$prefix}--inline-loading__checkmark-container {
-    fill: $interactive-04;
+    fill: $support-02;
 
     // For deprecated older markup
     &.#{$prefix}--inline-loading__svg {
