fix(button): ensure rem in variable definition level (#6470)
This change makes sure `rem` unit is used in variable definition level
(as it's done for other variables).

Fixes #6469.

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/globals/scss/_theme-tokens.scss
+++ b/packages/components/src/globals/scss/_theme-tokens.scss
@@ -88,7 +88,7 @@ $button-border-radius: 0 !default;
 /// @type Number
 /// @access public
 /// @group button
-$button-height: 48px !default;
+$button-height: 3rem !default;
 
 /// @type Value
 /// @access public
